// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodePanelBlocksField will receive right actions 1`] = `
Object {
  "handleOnChange": [Function],
}
`;

exports[`NodePanelBlocksField will receive right props 1`] = `
Object {
  "value": 38,
}
`;
